--- a/assets/albertine/css/default.css
+++ b/assets/albertine/css/default.css
@@ -73,7 +73,7 @@ section {
  *******************/
 .intro-screen,
 .intro-screen header {
-  background-color:#44a9eb;
+  background-color:#16a1d0;
   color:#fff;
 }
   .intro-screen h1,
